💻 Resuming in style - Java 16